tester_ft/log/compile_error_vec_14.txt
-VECTOR SWAP TEST-

./tmp/outfile_vec_14.cpp:26:6: error: no member named 'swap' in 'ft::vector<int>'
                v1.swap(v2);
                ~~ ^
./tmp/outfile_vec_14.cpp:29:12: error: no member named 'begin' in 'ft::vector<int>'
                if (*(v1.begin()) != M2) ++err_count;
                      ~~ ^
./tmp/outfile_vec_14.cpp:30:12: error: no member named 'begin' in 'ft::vector<int>'
                if (*(v2.begin()) != M1) ++err_count;
                      ~~ ^
./tmp/outfile_vec_14.cpp:34:3: error: no member named 'swap' in namespace 'ft'; did you mean 'std::swap'?
                ft::swap(v1, v2);
                ^~~~~~~~
                std::swap
/Applications/Xcode.app/Contents/Developer/Platforms/MacOSX.platform/Developer/SDKs/MacOSX.sdk/usr/include/c++/v1/__utility/swap.h:36:85: note: 'std::swap' declared here
inline _LIBCPP_INLINE_VISIBILITY __swap_result_t<_Tp> _LIBCPP_CONSTEXPR_AFTER_CXX17 swap(_Tp& __x, _Tp& __y)
                                                                                    ^
./tmp/outfile_vec_14.cpp:37:12: error: no member named 'begin' in 'ft::vector<int>'
                if (*(v1.begin()) != M1) ++err_count;
                      ~~ ^
./tmp/outfile_vec_14.cpp:38:12: error: no member named 'begin' in 'ft::vector<int>'
                if (*(v2.begin()) != M2) ++err_count;
                      ~~ ^
./tmp/outfile_vec_14.cpp:60:5: error: no member named 'swap' in 'ft::vector<int>'
        v3.swap(v4);
        ~~ ^
7 errors generated.
